--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <link rel="stylesheet" href="lookandfeel.css">
 </head>
 <body>
-    <!-- Reel -->
+    <!-- Wrapper to hold Reels -->
     <div class="outerWrapper">
+        <!-- Wrapper to Hold space left of the Reels -->
         <div class="wrapper-Placeholder">
             <!-- <button id="TestData">Test Data</button> -->
         </div>
+        <!-- Wrapper for Column 1 of Reels -->
         <div class="wrapper">
                 <div class="imageWrapper">
                     <img class="imageClass" id="Pos1" val="" src="Reel/Placeholder.png" alt="Seven">
@@ -23,6 +25,7 @@
                     <img class="imageClass" id="Pos3" val="" src="Reel/Placeholder.png" alt="Seven">
                 </div>
         </div>
+        <!-- Wrapper for Column 2 of Reels -->
         <div class="wrapper">
                 <div class="imageWrapper">
                     <img class="imageClass" id="Pos4" val="" src="Reel/Placeholder.png" alt="Seven"> 
@@ -34,6 +37,7 @@
                     <img class="imageClass" id="Pos6" val="" src="Reel/Placeholder.png" alt="Seven">
                 </div>
         </div>
+        <!-- Wrapper for Column 3 of Reels -->
         <div class="wrapper">
                 <div class="imageWrapper">
                     <img class="imageClass" id="Pos7" val="" src="Reel/Placeholder.png" alt="Seven">
@@ -45,10 +49,12 @@
                     <img class="imageClass" id="Pos9" val="" src="Reel/Placeholder.png" alt="Seven">
                 </div>
         </div>
+        <!-- Wrapper to Hold space right of the Reels -->
         <div class="wrapper-Placeholder">
             
         </div>
     </div>
+    <!-- Console below Reels -->
     <div class="console">
         <button onclick="spin()" class="spinButton" id="spinButton">Spin</button>
         <span id="winMeter">WinMeter</span>
